# aoc

./: .gitattributes  .gitignore  .release-please-manifest.json  README.md  app.js  benchmark_docs.md  codecov.yml  data.json  data.tar.gz.gpg  decrypt_data.sh  encrypt_data.sh  index.html  release-please-config.json  style.css
c/: .gitignore  CHANGELOG.md  CMakeLists.txt  README.md
c/bench/: CMakeLists.txt  bench_main.cpp
c/src/: CMakeLists.txt  main.c
c/src/aoc24/: aoc24.c  aoc24.h
c/src/aoc24/day01/: day01.h  day01_internal.h  part_1.c  part_2.c
c/src/aoc24/day02/: day02.h  (+3 more)
c/src/aoc_util/: int_util.c  int_util.h  parse_int_list.c  parse_int_list.h  registry.c  registry.h
c/test/: CMakeLists.txt
c/test/aoc24/: day01_generated.c  day01_parse_input.c  day02_generated.c  day03_generated.c  day04_generated.c  day05_generated.c
c/test/aoc_util/: parse_int_list.c
cpp/: .clang-format  .clang-tidy  .gitignore  CHANGELOG.md  CMakeLists.txt  Makefile  README.md  convert_benchmark.py  main.cpp
cpp/aoc24/: aoc24.cpp
cpp/aoc24/day01/: part_1.cpp
cpp/aoc_util/: Makefile  aoc_input_error.h  registry.cpp
cpp/bench/: CMakeLists.txt  bench_main.cpp
cpp/src/: CMakeLists.txt  main.cpp
cpp/src/aoc23/: CMakeLists.txt  aoc23.cpp  aoc23.h
cpp/src/aoc24/: CMakeLists.txt  aoc24.cpp  aoc24.h
cpp/src/aoc_util/: CMakeLists.txt  aoc_input_error.cpp  aoc_input_error.h  registry.cpp  registry.h
cpp/test/: CMakeLists.txt  main.cpp  main_test.cpp
cpp/util/: Makefile  registry.h
python/: .gitignore  CHANGELOG.md  README.md  aoc.py  conftest.py  convert_benchmark.py  pylock.toml  pyproject.toml  requirements.txt  requirements_test.txt  test_aoc.py  test_benchmark.py
python/aoc23/day01/: part_1.py  part_2.py
python/aoc23/day02/: part_1.py  part_2.py  shared.py
python/aoc23/day03/: part_1.py  part_2.py  shared.py
python/aoc23/day04/: part_1.py  part_2.py  shared.py
python/aoc23/day05/: part_1.py  part_2.py  shared.py
python/aoc23/day06/: part_1.py  part_2.py
python/aoc23/day07/: part_1.py  part_2.py
python/aoc23/day08/: part_1.py  part_2.py  shared.py
python/aoc23/day09/: part_1.py  part_2.py  shared.py
python/aoc23/day16/: part_1.py  part_2.py  shared.py
python/aoc23/day17/: part_1.py  part_2.py  shared.py
python/aoc24/04/: part_1.py  part_2.py
python/aoc24/05/: part_1.py
python/aoc24/10/: part_2.py
python/aoc24/11/: part_2.py
python/aoc24/20/: part_2.py
python/aoc24/22/: part_1.py
python/aoc24/day01/: part_1.py  part_2.py  test_generated.py  test_part_1.py  test_part_2.py
python/aoc24/day02/: part_1.py  part_2.py  shared.py  test_generated.py  test_part_1.py  test_part_2.py
python/aoc24/day03/: part_1.py  part_2.py  test_generated.py  test_part_1.py  test_part_2.py
python/aoc24/day04/: part_1.py  part_2.py  test_generated.py  test_part_1.py  test_part_2.py
python/aoc24/day05/: part_1.py  part_2.py  test_generated.py  test_part_1.py  test_part_2.py
python/aoc24/day06/: part_1.py  part_2.py  test_generated.py  test_part_1.py  test_part_2.py
python/aoc24/day07/: part_1.py  part_2.py  shared.py  test_generated.py  test_part_1.py  test_part_2.py
python/aoc24/day08/: part_1.py  part_2.py  shared.py  test_generated.py  test_part_1.py  test_part_2.py
python/aoc24/day09/: part_1.py  part_2.py  shared.py  test_generated.py  test_part_1.py  test_part_2.py
python/aoc24/day10/: part_1.py  part_2.py  test_generated.py  test_part_1.py  test_part_2.py
python/aoc24/day11/: part_1.py  part_2.py  test_generated.py  test_part_1.py  test_part_2.py
python/aoc24/day12/: part_1.py  part_2.py  shared.py  test_generated.py  test_part_1.py  test_part_2.py  test_shared.py
python/aoc24/day13/: part_1.py  part_2.py  test_generated.py  test_part_1.py  test_part_2.py
python/aoc24/day14/: part_1.py  part_2.py  shared.py  test_generated.py  test_part_1.py  test_part_2.py
python/aoc24/day15/: part_1.py  part_2.py  shared.py  test_generated.py  test_part_1.py  test_part_2.py
python/aoc24/day16/: part_1.py  part_2.py  shared.py  test_generated.py  test_part_1.py  test_part_2.py
python/aoc24/day17/: part_1.py  part_2.py  test_generated.py  test_part_1.py  test_part_2.py
python/aoc24/day18/: part_1.py  part_2.py  shared.py  test_generated.py  test_part_1.py  test_part_2.py
python/aoc24/day19/: part_1.py  part_2.py  shared.py  test_generated.py  test_part_1.py  test_part_2.py
python/aoc24/day20/: part_1.py  part_2.py  shared.py  test_generated.py  test_part_1.py  test_part_2.py
python/aoc24/day21/: part_1.py  part_2.py  test_generated.py  test_part_1.py  test_part_2.py
python/aoc24/day22/: part_1.py  part_2.py  shared.py  test_generated.py  test_part_1.py  test_part_2.py
python/aoc24/day23/: part_1.py  part_2.py  test_generated.py  test_part_1.py  test_part_2.py
python/aoc24/day24/: operation.py  part_1.py  part_2.py  test_operation.py  test_part_1.py  test_part_2.py
python/aoc24/day25/: part_1.py
python/aoc25/day01/: parse_input.py  part_1.py  part_2.py  test_generated.py  test_part_1.py  test_part_2.py
python/aoc25/day02/: find_repeated_blocks.py  parse_input.py  part_1.py  part_2.py  test_generated.py  test_part_1.py  test_part_2.py
python/aoc25/day03/: part_1.py  part_2.py  test_generated.py  test_part_1.py  test_part_2.py
python/aoc25/day04/: part_1.py  part_2.py  test_generated.py  test_part_1.py  test_part_2.py
python/aoc25/day05/: part_1.py  part_2.py  test_generated.py  test_part_1.py  test_part_2.py
python/aoc25/day06/: part_1.py  part_2.py  test_generated.py  test_part_1.py  test_part_2.py
python/aoc25/day07/: parse_input.py  part_1.py  part_2.py  test_generated.py  test_part_1.py  test_part_2.py
python/aoc25/day11/: part_1.py  part_2.py  test_generated.py  test_part_1.py  test_part_2.py
python/cmd/: __init__.py  cli_output.py  cmd_benchmark.py  cmd_list.py  cmd_parser.py  collect_solvers.py  const.py  get_part.py  testdata.py
python/commands/: __init__.py  cmd_benchmark.py  cmd_list.py  collect_solvers.py  const.py  testdata.py
python/test_utils/: __init__.py
python/util/: point.py  typed_coord.py
(+554 files in other folders)
