[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "aoc-framework"
version = "0.1.0"
dependencies = []

[tool.setuptools.packages.find]
where = ["."]
include = ["aoc*","cmd*"]

[[tool.mypy.overrides]]
module = "tqdm.*"
ignore_missing_imports = true