[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "aoc-framework"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "numpy>=2.2.0",
    "tqdm>=4.66.0"
]

[project.optional-dependencies]
coverage = [
    "coverage>=7.6"
]
lint = [
    "mypy>=1.19.1",
    "ruff>=0.15.1"
]
all = ["aoc-framework[coverage,lint]"]

[tool.setuptools.packages.find]
where = ["."]
include = ["aoc*","cmd*"]

[[tool.mypy.overrides]]
module = "tqdm.*"
ignore_missing_imports = true